fixed layout issue homeFeatured component

--- a/src/app/components/home-featured/home-featured.component.scss
+++ b/src/app/components/home-featured/home-featured.component.scss
@@ -20,7 +20,7 @@ $red: #DF5656;
             font-size: 56px;
         }}
         .button-col {
-            @media screen and (min-width:800px){
+              @media screen and (min-width:800px){
                 width: 50%;
             }
             width: 100%;
@@ -79,7 +79,10 @@ $red: #DF5656;
     }
     .feat-proj-row {
         .project-card-cont {
-         
+            @media screen and (min-width:800px){
+                width: 530px;
+            }
+            width: 400px;
             @media screen and (min-width: 1080px) {
                 padding: 0 2%;
             }
@@ -97,6 +100,7 @@ $red: #DF5656;
                     width: 100%;
                     height: 600px;
                 }
+                z-index: -1;
             }
             h1 {
                 @media screen and (max-width: 1080px) {
@@ -111,10 +115,10 @@ $red: #DF5656;
                     left: 30%;
                     padding-left: 17%;
                 }
-                @media screen and (min-width: 1500px) {
-                    padding-left: 15%;
+                @media screen and (min-width: 1080px) {
+                    padding-left: 17%;
                     position: absolute;
-                    top: 340%;
+                    top: 310%;
                     font-size: 200px;
                 }
                 font-family: sans-serif;
@@ -122,10 +126,10 @@ $red: #DF5656;
                 color: $very-light-grey;
             }
             .project-card-text {
-                @media screen and (min-width: 1500px) {
+                @media screen and (min-width: 1080px) {
                     position: absolute !important;
-                    top: 400% !important;
-                    padding-left: 20px !important;
+                    top: 350% !important;
+                    padding-left: 30px !important;
                 }
                 @media screen and (max-width: 1080px) {
                     position: absolute;
@@ -157,6 +161,7 @@ $red: #DF5656;
                     }
                 }
                 h3 {
+                    z-index: 1;
                     font-size: 18px;
                     font-weight: 300;
                     color: $very-light-grey;
@@ -164,6 +169,7 @@ $red: #DF5656;
                     padding-bottom: 10px;
                 }
                 button {
+                    z-index: 1;
                     width: 250px;
                     height: 30px;
                     background-color: transparent;
